--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,48 +3,38 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
   <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="fleft">
+      <h2>Filters</h2>
+
+      <div id="date-selector">
+        <label for="dateFrom">From:</label>
+        <input type="date" id="dateFrom" name="dateFrom">
+        <label for="dateTo">To:</label>
+        <input type="date" id="dateTo" name="dateTo">
+      </div>
+
+      <div id="currency-selector">
+        <label for="currency">Currency:</label>
+        <select name="currency" id="currency">
+          <option value="USD" selected>US Dollar ($)</option>
+          <option value="EUR">Euros (€)</option>
+        </select>
+      </div>
+    </div>
+
+    <div id="max-min-values" class="fright">
+      <h2>Values</h2>
+
+      <p>Max: <span class="js-max-value"></span></p>
+      <p>Min: <span class="js-min-value"></span></p>
+    </div>
+    <div class="clear"></div>
+
+    <canvas id="myChart"></canvas>
     <script src="./chart.js/dist/Chart.min.js"></script>
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-          type: 'bar',
-          data: {
-              labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-              datasets: [{
-                  label: '# of Votes',
-                  data: [4, 5, 3, 5, 2, 3],
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
-                  borderWidth: 1
-              }]
-          },
-          options: {
-              scales: {
-                  yAxes: [{
-                      ticks: {
-                          beginAtZero:true
-                      }
-                  }]
-              }
-          }
-      });
-    </script>
+    <script src="/javascripts/financial-data.js"></script>
   </body>
 </html>
